fix API rooms and address